# minimal

./: .env  .env.dist  .gitignore  Dockerfile  Makefile  docker-compose.yaml  minimal.py  requirements.txt  serverless.yml
.docker/node/: Dockerfile  serviceAccountKey.json
.docker/node/.config/configstore/: firebase-tools.json  update-notifier-firebase-tools.json  update-notifier-npm.json
.docker/python/: Dockerfile  requirements.txt
.serverless/: cloudformation-template-update-stack.json  serverless-state.json
api/: Dockerfile  minimal.py  package-lock.json  requirements.txt  serverless.yml
api/app/: models.py
api/app/management/commands/: populatedb.py
api/app/migrations/: 0001_initial.py
app/: models.py  schema.py
app/management/commands/: populatedb.py
app/migrations/: 0001_initial.py  0002_auto_20200926_1833.py
app/tests/: tests_patient.py
client/: package.json
client/src/: App.js
client/src/components/: patients.js
core/: Dockerfile  minimal.py  pyproject.toml
core/apps/minimal/: schema.py
core/apps/minimal/management/commands/: populatedb.py
core/apps/minimal/tests/: tests_patient.py
