[tool.poetry]
name = "poetry"
version = "0.1.0"
description = "Flask Starter"
authors = ["Cristian Angulo <cristian@nietzscheson.com>"]

[tool.poetry.dependencies]
python = "3.9.2"
# Flask = "==2.0.3"
# psycopg2 = "2.9.3"
# Flask-SQLAlchemy= "==2.5.1"
# Flask-Migrate= "==3.1.0"
# factory-boy= "==3.2.1"

Django = "==3.0.3"
Werkzeug = "==1.0.1"
psycopg2-binary = "==2.8.4"

graphene-django = "==2.8.0"
django-filter = "==2"
django-cors-headers = "==3.2.1"

[tool.poetry.dev-dependencies]
pytest = "7.1.1"
Faker = "==4.0"
django-seed = "==0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
